<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <ImageView
            style="@style/TransactionIconStyle"
            android:src="@drawable/ic_currency_inr_black_24dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/amount"
            style="@style/TransactionFieldStyle"
            android:hint="@string/amount"
            android:inputType="number" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <RadioButton
            android:id="@+id/income"
            style="@style/Category"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/expense"
            style="@style/Category"
            android:text="@string/expense" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <ImageView
            style="@style/TransactionIconStyle"
            android:src="@drawable/ic_short_text_black_24dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/description"
            style="@style/TransactionFieldStyle"
            android:hint="@string/description"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <ImageView
            style="@style/TransactionIconStyle"
            android:src="@drawable/ic_insert_invitation_black_24dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/select_date"
            style="@style/TransactionFieldStyle"
            android:cursorVisible="false"
            android:focusable="false"
            android:text="@string/today"
            tools:ignore="TextFields" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            style="@style/TransactionIconStyle"
            android:src="@drawable/ic_add_location_black_24dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/location"
            style="@style/TransactionFieldStyle"
            android:hint="@string/location"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/get_from_gallery"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/ic_insert_photo_black_24dp"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/get_from_camera"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/ic_camera_alt_black_24dp"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        tools:src="@drawable/placeholder_image" />

</LinearLayout>
